--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <div class="info">
         <p><strong>Full Name:</strong>Samrawit G Assefa</p>
-        <p><strong>Email:</strong> <a href="mailto:Samrawit.G.Assefa@Gmail.Com">yourname@gmail.com</a></p>
+        <p><strong>Email:</strong> <a href="mailto:Samrawit.G.Assefa@Gmail.Com">Samrawit.G.Assefa@gmail.com</a></p>
         <p><strong>Phone:</strong> </p>
     </div>
 
